# cube_solver

./: CMakeLists.txt  README.md  color_operation.cpp  color_operation.h  cube_block.cpp  cube_block.h  cube_bound.cpp  cube_bound.h  cube_corner.cpp  cube_corner.h  cube_data.h  cube_squares.cpp  cube_squares.h  kociemba  main.cpp  solve.cpp
include/: color_operation.h  cube_block.h  cube_bound.h  cube_corner.h  cube_data.h  cube_squares.h  file_resolution.h  pca9685_wiringpi.h  servo.h  video.h
mechanism/: 2mm魔方接点.SLDPRT  M2x16.SLDPRT  M2螺母.SLDPRT  M3x50外六角.SLDPRT  M3x50杯头内六角.SLDPRT  M3螺母.SLDPRT  中心块.SLDPRT  主体.SLDPRT  圣手魔方无盖.SLDASM  摄像头.SLDASM  摄像头固定.SLDPRT  摄像头连接轴.SLDPRT  棱块.SLDPRT  舵机.SLDPRT  舵机座下A.SLDPRT  舵机座下B.SLDPRT  舵盘.SLDPRT  螺丝转换.SLDPRT  螺丝连接.SLDPRT  装配.SLDASM  角块.SLDPRT  连接轴.SLDPRT
res/: output.txt  sequence.txt
src/: color_operation.cpp  cube_block.cpp  cube_bound.cpp  cube_corner.cpp  cube_squares.cpp  file_resolution.cpp  pca9685_wiringpi.cpp  servo.cpp  solve.cpp  video.cpp
